Improve sal-akka-raft assertions
Use assertInstanceOf()/assertSame() instead of referencing the
behavior's role.

Change-Id: I58d65fea5676b95f76ca00b40d5a9e44a33d8dfe
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>